--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,12 +79,32 @@
                 android:id="@+id/btnorange"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Oranges" />
+                android:text="RegisterLocation" />
+
+            <Button
+                android:id="@+id/btn_add_agent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reports" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/btn_reg_agent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RegisterAgent" />
+
+            <Button
+                android:id="@+id/btn_add_contestant"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AddContestant" />
+
+        </TableRow>
     </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
